fixed arrows on mobile devices

--- a/main.css
+++ b/main.css
@@ -289,7 +289,7 @@ h3 {
     border-top-left-radius: 500px;
     border-top-right-radius: 500px; }
   .hero-container .start-button {
-    margin-top: 70px; }
+    margin-top: 45px; }
 
   .headline {
     font-size: 2em;
