--- a/stylesheets/_mobile.scss
+++ b/stylesheets/_mobile.scss
@@ -65,7 +65,7 @@
     }
 
     .start-button {
-      margin-top: 70px;
+      margin-top: 45px;
     }
   }
 
